--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,target-densitydpi=device-dpi">
 	<title><%=title %></title>
+	<style>
+		html,body{
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+			margin: 0;
+			padding:0;
+			border:0;
+		}
+	</style>
 </head>
 <body>
-	
+	<canvas id="mainCanvas"></canvas>
+
+	<script src="js/require.js" data-main="js/main"></script>
 </body>
 </html>
