--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,10 @@
 			margin: 0;
 			padding:0;
 			border:0;
+			text-align: center;
+		}
+		#mainCanvas{
+			margin:auto;
 		}
 	</style>
 </head>
